--- a/style.css
+++ b/style.css
@@ -2,4 +2,12 @@ div{
     background-color: aquamarine;
     border-radius: 20px;
     border: 10px solid rgb(150, 38, 38);
+    margin-bottom: 10px ;
+     box-shadow: 10px 14px 14px rgba(0, 242, 255, 0.832);
+}
+h2{
+    color: blueviolet;
+    font: bold;
+    text-align: center;
+   
 }
